--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.16.0",
     "sacn": "^4.4.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "zip-lib": "^1.0.4"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
